examples/datalog/32_math/05_abs_function.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_abs
Knowledge graph 'test_abs' created.
Switched to knowledge graph: test_abs
> .kg use test_abs
Switched to knowledge graph: test_abs
> +nums[(-5,), (-3,), (0,), (3,), (5,)].
Inserted 5 fact(s) into 'nums'.
> abs_val(X, Y) :- nums(X), Y = ABS(X).
Script error: Parse error: Invalid term: 'ABS(X)'
