examples/datalog/32_math/05_abs_function.dl
% Test: Absolute value function
% Expected: Return absolute value
% Category: 32_math
% Priority: P2 - Math functions

.kg create test_abs
.kg use test_abs

+nums[(-5,), (-3,), (0,), (3,), (5,)].

abs_val(X, Y) :- nums(X), Y = ABS(X).

?- abs_val(X, Y).

.kg use default
.kg drop test_abs
